<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="200dp"
    android:layout_height="150dp"
    tools:context=".DialFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_marginTop="95dp"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/acceleration" />
    <TextView
        android:textAlignment="center"
        android:layout_marginTop="35dp"
        android:textSize="50dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/numbers_acceleration"
        android:id="@+id/metre_squared"/>
    <TextView
        android:textAlignment="center"
        android:layout_marginLeft="95dp"
        android:layout_marginTop="75dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/metre_second_squared" />


</FrameLayout>