<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimary"
    tools:context=".TimeTracker">



    <!-- TODO: Update blank fragment layout -->




    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:scaleX="0.8"
        android:scaleY="0.8"
        android:layout_alignParentTop="true">
        <TextView
            android:layout_marginTop="95dp"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/acceleration"
            android:textColor="@color/colorOnPrimarySoft"
            style="@style/OverlayText"/>
        <TextView
            android:textAlignment="center"
            android:layout_marginTop="35dp"
            android:textSize="50dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/numbers_acceleration"
            android:id="@+id/numbers_acceleration"
            android:textColor="@color/colorOnPrimarySoft"
            style="@style/OverlayTextLarge"/>
        <TextView
            android:textAlignment="center"
            android:layout_marginLeft="95dp"
            android:layout_marginTop="75dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/metre_second_squared"
            android:textColor="@color/colorOnPrimarySoft"
            style="@style/OverlayText"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:layout_marginLeft="200dp"
        android:scaleX="0.8"
        android:scaleY="0.8"
        android:layout_alignParentTop="true"
        android:id="@+id/container_2"
        >
        <TextView
            android:layout_marginTop="95dp"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/top_speed"
            android:textColor="@color/colorOnPrimarySoft"
            style="@style/OverlayText"/>
        <TextView
            android:textAlignment="center"
            android:layout_marginTop="35dp"
            android:textSize="50dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/numbers_acceleration"
            android:id="@+id/top_speed"
            android:textColor="@color/colorOnPrimarySoft"
            style="@style/OverlayTextLarge"/>
        <TextView
            android:textAlignment="center"
            android:layout_marginLeft="95dp"
            android:layout_marginTop="75dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/metre_second"
            android:textColor="@color/colorOnPrimarySoft"
            style="@style/OverlayText"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="200dp"
        android:layout_height="150dp"

        android:layout_marginLeft="100dp"
        android:scaleX="1.2"
        android:scaleY="1.2"
        android:layout_below="@id/container_2">
        <TextView
            android:layout_marginTop="95dp"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/currentSpeed"
            android:textColor="@color/colorOnPrimary"
            style="@style/OverlayText"
            />
        <TextView
            android:textAlignment="center"
            android:layout_marginTop="35dp"
            android:textSize="50dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/numbers_current_speed"
            android:id="@+id/numbers_speed"
            android:textColor="@color/colorOnPrimary"
            style="@style/OverlayTextLarge"/>
        <TextView
            android:textAlignment="center"
            android:layout_marginLeft="95dp"
            android:layout_marginTop="75dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/metre_second"
            android:textColor="@color/colorOnPrimary"
            style="@style/OverlayText"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</RelativeLayout>