<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimary"
    tools:context=".TimeTracker">

    <!-- TODO: Update blank fragment layout -->

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="0dp"
        app:cardBackgroundColor="@color/colorOnSurface"
        app:cardElevation="02dp"
        app:cardCornerRadius="0dp"/>

    <com.google.android.material.appbar.MaterialToolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_margin="0dp"
        android:background="@color/colorPrimary"
        app:cardBackgroundColor="@color/colorPrimaryVariant"
        app:cardElevation="08dp"
        app:cardCornerRadius="0dp"/>
        <TextView android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:text="@string/prompter_label"
            android:theme="@style/AppTheme"
            android:padding="20dp"
            android:textSize="25sp"
            android:textColor="@color/colorOnPrimarySoft"
            android:layout_marginTop="10dp"
            android:elevation="24dp"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:layout_marginTop="100dp"
        android:scaleX="0.8"
        android:scaleY="0.8">
        <TextView
            android:layout_marginTop="95dp"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/acceleration"
            android:textColor="@color/colorOnPrimarySoft"
            style="@style/OverlayText"/>
        <TextView
            android:textAlignment="center"
            android:layout_marginTop="35dp"
            android:textSize="50dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/numbers_acceleration"
            android:id="@+id/numbers_acceleration"
            android:textColor="@color/colorOnPrimarySoft"
            style="@style/OverlayTextLarge"/>
        <TextView
            android:textAlignment="center"
            android:layout_marginLeft="95dp"
            android:layout_marginTop="75dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/metre_second_squared"
            android:textColor="@color/colorOnPrimarySoft"
            style="@style/OverlayText"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="200dp"
        android:scaleX="0.8"
        android:scaleY="0.8"
        >
        <TextView
            android:layout_marginTop="95dp"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/top_speed"
            android:textColor="@color/colorOnPrimarySoft"
            style="@style/OverlayText"/>
        <TextView
            android:textAlignment="center"
            android:layout_marginTop="35dp"
            android:textSize="50dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/numbers_acceleration"
            android:id="@+id/top_speed"
            android:textColor="@color/colorOnPrimarySoft"
            style="@style/OverlayTextLarge"/>
        <TextView
            android:textAlignment="center"
            android:layout_marginLeft="95dp"
            android:layout_marginTop="75dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/metre_second"
            android:textColor="@color/colorOnPrimarySoft"
            style="@style/OverlayText"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:layout_marginTop="200dp"
        android:layout_marginLeft="100dp"
        android:scaleX="1.2"
        android:scaleY="1.2">
        <TextView
            android:layout_marginTop="95dp"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/currentSpeed"
            android:textColor="@color/colorOnPrimary"
            style="@style/OverlayText"
            />
        <TextView
            android:textAlignment="center"
            android:layout_marginTop="35dp"
            android:textSize="50dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/numbers_current_speed"
            android:id="@+id/numbers_speed"
            android:textColor="@color/colorOnPrimary"
            style="@style/OverlayTextLarge"/>
        <TextView
            android:textAlignment="center"
            android:layout_marginLeft="95dp"
            android:layout_marginTop="75dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/metre_second"
            android:textColor="@color/colorOnPrimary"
            style="@style/OverlayText"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="350dp"
        app:cardBackgroundColor="@color/colorBlackGlass"
        app:cardElevation="03dp"
        app:cardCornerRadius="0dp"
        android:layout_marginLeft="80dp"
        android:layout_marginRight="80dp"
        app:strokeColor="@color/colorBase"
        >
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="8dp"
            >
            <TableRow>
                <TextView
                    android:paddingLeft="5dp"
                    android:text="Distance:"
                    android:textColor="@color/colorOnPrimary"
                    android:textSize="15sp"
                    ></TextView>
                <TextView
                    android:paddingLeft="5dp"
                    android:text="@string/numbers_distance"
                    android:textColor="@color/colorOnPrimary"
                    android:textSize="15sp"
                    ></TextView>
                <TextView
                    android:paddingLeft="5dp"
                    android:text="@string/metre"
                    android:textColor="@color/colorOnPrimary"
                    android:textSize="15sp"
                    android:layout_marginLeft="-20dp"
                    android:scaleX=".8"
                    android:scaleY=".8"
                    ></TextView>
            </TableRow>
            <TableRow>
                <TextView
                    android:paddingLeft="5dp"
                    android:text="Remaining:"
                    android:textColor="@color/colorOnPrimary"
                    android:textSize="15sp"
                    ></TextView>
                <TextView
                    android:paddingLeft="5dp"
                    android:text="@string/distance_left"
                    android:textColor="@color/colorOnPrimary"
                    android:textSize="15sp"
                    ></TextView>
                <TextView
                    android:paddingLeft="5dp"
                    android:text="@string/metre"
                    android:textColor="@color/colorOnPrimary"
                    android:textSize="15sp"
                    android:layout_marginLeft="-15dp"
                    android:scaleX=".8"
                    android:scaleY=".8"
                    ></TextView>
            </TableRow>
            <TableRow>
                <TextView
                    android:paddingLeft="5dp"
                    android:text="Time:"
                    android:textColor="@color/colorOnPrimary"
                    android:textSize="15sp"
                    ></TextView>
                <TextView
                    android:paddingLeft="5dp"
                    android:text="@string/numbers_time"
                    android:textColor="@color/colorOnPrimary"
                    android:textSize="15sp"
                    ></TextView>
            </TableRow>
            <TableRow>
                <TextView
                    android:paddingLeft="5dp"
                    android:text="Average Speed:"
                    android:textColor="@color/colorOnPrimary"
                    android:textSize="15sp"
                    ></TextView>
                <TextView
                    android:paddingLeft="5dp"
                    android:text="@string/numbers_average_speed"
                    android:textColor="@color/colorOnPrimary"
                    android:textSize="15sp"
                    ></TextView>
                <TextView
                    android:paddingLeft="5dp"
                    android:text="@string/metre_second_squared"
                    android:textColor="@color/colorOnPrimary"
                    android:textSize="15sp"
                    android:layout_marginLeft="-20dp"
                    android:scaleX=".8"
                    android:scaleY=".8"
                    ></TextView>
            </TableRow>
        </TableLayout>
    </com.google.android.material.card.MaterialCardView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            app:layout_constraintBottom_toBottomOf="parent">

            <RadioGroup
                android:id="@+id/radio_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@color/colorBase">

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/one"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/radio_selector"
                    android:button="@android:color/transparent"
                    android:elevation="24dp"
                    android:text="Speedometer"
                    android:textColor="@drawable/text_color"
                    android:padding="20dp"
                    android:textAlignment="center"
                     />

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/two"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="20dp"
                    android:background="@drawable/radio_selector"
                    android:button="@android:color/transparent"
                    android:elevation="24dp"
                    android:text="Settings"
                    android:textColor="@drawable/text_color"
                    android:textAlignment="center"/>

            </RadioGroup>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="500dp">
        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/bottom_app_nav"
            android:background="@color/colorBlackGlass"
            android:textColor="@drawable/text_color"
            app:menu="@menu/bottom_nav_menu"
            />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</FrameLayout>