<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    android:id="@+id/home_container"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".FragmentHome">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        >

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/materialCardView2"
            android:layout_width="match_parent"
            android:layout_height="1000dp"
            android:layout_margin="0dp"
            app:cardBackgroundColor="@color/colorOnSurface"
            app:cardCornerRadius="0dp"
            app:cardElevation="02dp"
            android:layout_centerInParent="true" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/materialCardView3"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="100dp"
            app:cardBackgroundColor="@color/colorBlackGlass"
            app:cardCornerRadius="0dp"
            app:cardElevation="03dp"
            app:strokeColor="@color/colorBase">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp">

                <TableRow>

                    <TextView
                        android:paddingLeft="5dp"
                        android:text="Distance To Run:"
                        android:textColor="@color/colorOnPrimary"
                        android:textSize="15sp"></TextView>

                    <TextView
                        android:id="@+id/target_set"
                        android:paddingLeft="5dp"
                        android:text="@string/numbers_distance"
                        android:textColor="@color/colorOnPrimary"
                        android:textSize="15sp"
                        android:textAlignment="textEnd"
                        android:layout_marginRight="20dp"></TextView>

                    <TextView
                        android:layout_marginLeft="-20dp"
                        android:paddingLeft="5dp"
                        android:scaleX=".8"
                        android:scaleY=".8"
                        android:text="@string/metre"
                        android:textColor="@color/colorOnPrimary"
                        android:textSize="15sp"></TextView>
                </TableRow>

                <TableRow>

                    <TextView
                        android:paddingLeft="5dp"
                        android:text="Personal Best Time:"
                        android:textColor="@color/colorOnPrimary"
                        android:textSize="15sp"></TextView>

                    <TextView
                        android:id="@+id/view_time"
                        android:paddingLeft="5dp"
                        android:text="@string/numbers_time"
                        android:textColor="@color/colorOnPrimary"
                        android:textSize="15sp"></TextView>
                </TableRow>

                <TableRow>

                    <TextView
                        android:paddingLeft="5dp"
                        android:text="Personal Best Speed:"
                        android:textColor="@color/colorOnPrimary"
                        android:textSize="15sp"></TextView>

                    <TextView
                        android:id="@+id/view_speed"
                        android:paddingLeft="5dp"
                        android:text="@string/numbers_average_speed"
                        android:textColor="@color/colorOnPrimary"
                        android:textSize="15sp"
                        android:textAlignment="textEnd"
                        android:layout_marginRight="20dp"></TextView>

                    <TextView
                        android:layout_marginLeft="-20dp"
                        android:paddingLeft="5dp"
                        android:scaleX=".8"
                        android:scaleY=".8"
                        android:text="@string/metre_second"
                        android:textColor="@color/colorOnPrimary"
                        android:textSize="15sp"></TextView>
                </TableRow>
            </TableLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:layout_width="@android:dimen/notification_large_icon_width"
            android:layout_height="@android:dimen/notification_large_icon_width"
            android:id="@+id/button_go"
            android:scaleX="2.5"
            android:scaleY="2.5"
            android:text="@string/txt_go_button"
            android:textAlignment="center"
            android:textSize="10dp"
            app:backgroundTint="@color/colorAccent"

            app:rippleColor="@android:color/transparent"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/materialCardView3"/>



    </RelativeLayout>




</ScrollView>
